Fix logo overlap and add favicon

--- a/app/client/style.css
+++ b/app/client/style.css
@@ -28,6 +28,7 @@ body {
   padding-bottom: 20px;
 }
 
+/* Set navbar and footer font to Monda */
 .navbar, #login-dropdown, footer {
   font-family: 'Monda', sans-serif;
   color: white;
@@ -39,9 +40,9 @@ body {
   color: white;
 }
 
-/* Change the toggle icon color to white */
+/* Customize the toggle (hamburger) svg icon */
 #toggle-button .navbar-toggler-icon {
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255, 1.0)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
 }
 
 /* Change the toggle icon's border color to white */
